--- a/wefit/src/Pages/Coach-page/Coach.module.css
+++ b/wefit/src/Pages/Coach-page/Coach.module.css
@@ -2,6 +2,7 @@
     background-color: #f3fbfe;
     height: auto;
     padding: 80px;
+    /* border: 1px solid black; */
 }
 
 .Main_Div_Inside_Div {
