--- a/wefit/src/Components/Routines/Carousel/Carousel.scss
+++ b/wefit/src/Components/Routines/Carousel/Carousel.scss
@@ -7,11 +7,25 @@
         position: absolute;
         left: 0px;
         top: 50%;
+        @media screen and (max-width: 900px) {
+          left: -10px
+        }
+        @media screen and (max-width: 542px) {
+          top: 49%;
+          left: -15px
+        }
       }
       .next {
         position: absolute;
         right: 0px;
         top: 50%;
+        @media screen and (max-width: 900px) {
+          right: -10px
+        }
+        @media screen and (max-width: 542px) {
+          top: 49%;
+          right: -15px;
+        }
       }
 }
 .slide1 {
@@ -28,11 +42,25 @@
         align-items: center;
         justify-content: center;
         border-radius: 10px;
-        box-shadow: 2px 2px 10px rgb(113, 113, 113);
+        box-shadow: 2px 2px 10px rgb(209, 207, 207);
         img{
             height: 100%;
             width: 100%;
             object-fit: cover;
+        }
+        .app__slider-card{
+          position: relative;
+          cursor: pointer;
+         
+          .app__pro-icon{
+            position: absolute;
+            top: 0;
+            left: 10px;
+            color: rgb(248, 208, 143);
+            svg{
+              font-size: 23px;
+            }
+          }
         }
       }
   }
@@ -49,6 +77,7 @@
     color: rgb(237, 236, 236);
     background-color: rgb(61, 61, 61);
     border-radius: 50%;
+    @media screen and (max-width: 480px) {
+      display: none !important;
+    }
   }
- 
-  
