--- a/wefit/src/Components/Routines/Filters/Filters.scss
+++ b/wefit/src/Components/Routines/Filters/Filters.scss
@@ -3,20 +3,25 @@
     margin: 30px auto;
 }
 .app__search-container{
-
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    gap: 20px;
     .app__checkbox{
-        width: 55%;
-    
         display: flex;
-        justify-content: space-between;
+        gap: 20px;
+        flex-wrap: wrap;
+        .app__check-input{
+      
+        }
     }
     .app__search{
-        width: 40%;
         display: flex;
-       
+        align-items: center;
+
+       .app__search-input{
+        margin-right: 20px;
+       }
     }
 }
