day-5 files added

--- a/wefit/src/index.css
+++ b/wefit/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.slick-list {
+  margin: 0 -5px;
+}
+.slick-slide>div {
+  padding: 0 5px;
+  
+}
+
