--- a/wefit/src/Styles/Excercise.module.css
+++ b/wefit/src/Styles/Excercise.module.css
@@ -51,3 +51,17 @@
   color: rgb(33, 110, 199);
   font-weight: 600;
 }
+.bgcolor:nth-of-type(even) {
+  background-color: rgb(255, 255, 255);
+}
+.text p {
+  font-size:13px;
+  cursor:pointer;
+}
+.text>div {
+  justify-content: space-between;
+}
+.text>div:hover {
+  color: rgb(33, 110, 199);
+  font-weight: 600;
+}
