added shivam gote pre final work by vaibhav

--- a/wefit/src/Components/Blog/Blog.module.css
+++ b/wefit/src/Components/Blog/Blog.module.css
@@ -3,7 +3,7 @@
     height: auto;
     padding: 60px;
     background-color: #f3fdfe;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 
 .blog_Img_Main_section {
