--- a/wefit/src/Components/Blog/SingleBlogPage.module.css
+++ b/wefit/src/Components/Blog/SingleBlogPage.module.css
@@ -3,7 +3,7 @@
     height: auto;
     padding: 40px;
     background-color: #f3fdfe;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 
 
