--- a/wefit/src/Components/Community/Community.module.css
+++ b/wefit/src/Components/Community/Community.module.css
@@ -3,7 +3,7 @@
     height: auto;
     padding: 60px;
     background-color: #f3fdfe;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 
 .Community_Main_div_section {
