added final draft

--- a/wefit/src/Components/Routines/Carousel/Carousel.scss
+++ b/wefit/src/Components/Routines/Carousel/Carousel.scss
@@ -38,6 +38,7 @@
     .slideChild {
         height: 250px;
         width: auto;
+        background-color: #fff;
         display: flex;
         align-items: center;
         justify-content: center;
