--- a/wefit/src/Components/Routines/Carousel/Carousel.scss
+++ b/wefit/src/Components/Routines/Carousel/Carousel.scss
@@ -1,83 +1,83 @@
-.app__carousel-container{
-    position: relative;
-    width: 80%;
-    margin: auto;
-    margin-top: 30px;
-    .prev {
-        position: absolute;
-        left: 0px;
-        top: 50%;
-        @media screen and (max-width: 900px) {
-          left: -10px
-        }
-        @media screen and (max-width: 542px) {
-          top: 49%;
-          left: -15px
-        }
-      }
-      .next {
-        position: absolute;
-        right: 0px;
-        top: 50%;
-        @media screen and (max-width: 900px) {
-          right: -10px
-        }
-        @media screen and (max-width: 542px) {
-          top: 49%;
-          right: -15px;
-        }
-      }
-}
-.slide1 {
-    width: 95%;
-    height: auto !important;
-    padding: 10px;
-    position: relative;
+// // .app__carousel-container{
+//     position: relative;
+//     width: 80%;
+//     margin: auto;
+//     margin-top: 30px;
+//     .prev {
+//         position: absolute;
+//         left: 0px;
+//         top: 50%;
+//         @media screen and (max-width: 900px) {
+//           left: -10px
+//         }
+//         @media screen and (max-width: 542px) {
+//           top: 49%;
+//           left: -15px
+//         }
+//       }
+//       .next {
+//         position: absolute;
+//         right: 0px;
+//         top: 50%;
+//         @media screen and (max-width: 900px) {
+//           right: -10px
+//         }
+//         @media screen and (max-width: 542px) {
+//           top: 49%;
+//           right: -15px;
+//         }
+//       }
+// }
+// .slide1 {
+//     width: 95%;
+//     height: auto !important;
+//     padding: 10px;
+//     position: relative;
    
 
-    .slideChild {
-        height: 250px;
-        width: auto;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 10px;
-        box-shadow: 2px 2px 10px rgb(209, 207, 207);
-        img{
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-        }
-        .app__slider-card{
-          position: relative;
-          cursor: pointer;
+//     .slideChild {
+//         height: 250px;
+//         width: auto;
+//         display: flex;
+//         align-items: center;
+//         justify-content: center;
+//         border-radius: 10px;
+//         box-shadow: 2px 2px 10px rgb(209, 207, 207);
+//         img{
+//             height: 100%;
+//             width: 100%;
+//             object-fit: cover;
+//         }
+//         .app__slider-card{
+//           position: relative;
+//           cursor: pointer;
          
-          .app__pro-icon{
-            position: absolute;
-            top: 0;
-            left: 10px;
-            color: rgb(248, 208, 143);
-            svg{
-              font-size: 23px;
-            }
-          }
-        }
-      }
-  }
+//           .app__pro-icon{
+//             position: absolute;
+//             top: 0;
+//             left: 10px;
+//             color: rgb(248, 208, 143);
+//             svg{
+//               font-size: 23px;
+//             }
+//           }
+//         }
+//       }
+//   }
 
-  .next,
-  .prev {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 20px;
-    width: 20px;
-    font-size: 40px;
-    color: rgb(237, 236, 236);
-    background-color: rgb(61, 61, 61);
-    border-radius: 50%;
-    @media screen and (max-width: 480px) {
-      display: none !important;
-    }
-  }
+//   .next,
+//   .prev {
+//     cursor: pointer;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     height: 20px;
+//     width: 20px;
+//     font-size: 40px;
+//     color: rgb(237, 236, 236);
+//     background-color: rgb(61, 61, 61);
+//     border-radius: 50%;
+//     @media screen and (max-width: 480px) {
+//       display: none !important;
+//     }
+//   }
